Refactor to updated JDK